[package]
name = "ingest"
version = "0.1.0"
description = "PoC Ingest Server for the Helium Network"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
custom-tracing = { path = "../custom_tracing", features = ["grpc"] }
file-store = { path = "../file_store" }
futures = { workspace = true }
futures-util = { workspace = true }
helium-crypto = { workspace = true }
helium-proto = { workspace = true }
http = { workspace = true }
humantime-serde = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
poc-metrics = { path = "../metrics" }
prost = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
task-manager = { path = "../task_manager" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
triggered = { workspace = true }

[dev-dependencies]
backon = "0"
