[package]
name = "ingest"
version = "0.1.0"
description = "PoC Ingest Server for the Helium Network"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bs58 = { workspace = true }
http = { workspace = true }
tonic = { workspace = true }
triggered = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
helium-proto = { workspace = true }
helium-crypto = { workspace = true }
helium-proto-crypto = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
humantime-serde = { workspace = true }

file-store = { path = "../file_store" }
file-store-oracles = { path = "../file_store_oracles" }
poc-metrics = { path = "../metrics" }
mobile-config = { path = "../mobile_config" }
task-manager = { path = "../task_manager" }
custom-tracing = { path = "../custom_tracing", features = ["grpc"] }
tls-init = { path = "../tls_init" }

[dev-dependencies]
backon = "1"
rand = { workspace = true }
