[package]
name = "ingest-mobile"
version = "0.1.0"
description = "Mobile PoC Ingest Server for the Helium Network"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
helium-crypto = { workspace = true }
helium-proto = { workspace = true }
http = { workspace = true }
humantime-serde = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
triggered = { workspace = true }

custom-tracing = { path = "../custom_tracing", features = ["grpc"] }
file-store = { path = "../file_store" }
mobile-config = { path = "../mobile_config" }
poc-metrics = { path = "../metrics" }
task-manager = { path = "../task_manager" }

[dev-dependencies]
backon = "1"
