[package]
name = "iot-config-client"
version = "0.1.0"
description = "Client for IOT Config"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = {workspace = true}
futures = {workspace = true}
serde = {workspace = true}
http-serde = {workspace = true}
thiserror = {workspace = true}
beacon = {workspace = true}
helium-proto = { workspace = true }
helium-crypto = { workspace = true }
http = {workspace = true}
tonic = {workspace = true}
retainer = {workspace = true}
async-trait = {workspace = true}
rand = {workspace = true}
