[package]
name = "iot-packet-verifier"
version = "0.1.0"
description = "Packet verification for IOT"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
helium-crypto = { workspace = true, features = [
    "sqlx-postgres",
    "multisig",
    "solana",
] }
helium-proto = { workspace = true }
http = { workspace = true }
http-serde = { workspace = true }
humantime-serde = { workspace = true }
metrics = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
triggered = { workspace = true }

custom-tracing = { path = "../custom_tracing" }
db-store = { path = "../db_store" }
file-store = { path = "../file_store" }
file-store-oracles = { path = "../file_store_oracles" }
iot-config = { path = "../iot_config" }
poc-metrics = { path = "../metrics" }
solana = { path = "../solana" }
task-manager = { path = "../task_manager" }
tls-init = { path = "../tls_init" }
