[package]
name = "iot-verifier"
version = "0.1.0"
description = "PoC Verifier Server for the Helium Iot Network"
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
cmake = "0.1"

[dependencies]
anyhow = {workspace = true}
config = {workspace = true}
clap = {workspace = true}
thiserror = {workspace = true}
serde =  {workspace = true}
serde_json = {workspace = true}
http-serde = {workspace = true}
sqlx = {workspace = true}
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = {workspace = true}
sha2 = {workspace = true}
tonic = {workspace = true}
triggered = {workspace = true}
futures = {workspace = true}
futures-util = {workspace = true}
prost = {workspace = true}
chrono = { workspace = true }
helium-proto = { workspace = true }
helium-crypto = {workspace = true }
async-trait = {workspace = true}
h3o = {workspace = true, features = ["geo"]}
xorf = {workspace = true}
lazy_static = {workspace = true}
once_cell = {workspace = true}
file-store = { path = "../file_store" }
metrics = {workspace = true}
retainer = {workspace = true}
blake3 = {workspace = true}
iot-config = { path = "../iot_config" }
poc-metrics = { path = "../metrics" }
db-store = {path = "../db_store"}
denylist = {path = "../denylist"}
reward-scheduler = {path = "../reward_scheduler"}
rust_decimal = {workspace = true, features = ["maths"]}
rust_decimal_macros = {workspace = true}
twox-hash = {workspace = true}
itertools = {workspace = true}
rand = {workspace = true}
beacon = {workspace = true}
price = { path = "../price" }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
task-manager = { path = "../task_manager" }
