[package]
name = "iot-verifier"
version = "0.1.0"
description = "PoC Verifier Server for the Helium Iot Network"
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
cmake = "0.1"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
beacon = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
h3o = { workspace = true, features = ["geo"] }
helium-crypto = { workspace = true, features = ["sqlx-postgres"] }
helium-proto = { workspace = true }
http-serde = { workspace = true }
humantime-serde = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
retainer = { workspace = true }
rust_decimal = { workspace = true, features = ["maths"] }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
triggered = { workspace = true }
twox-hash = { workspace = true }
xorf = { workspace = true }

custom-tracing = { path = "../custom_tracing" }
db-store = { path = "../db_store" }
denylist = { path = "../denylist" }
file-store = { path = "../file_store" }
file-store-oracles = { path = "../file_store_oracles" }
iot-config = { path = "../iot_config" }
poc-metrics = { path = "../metrics" }
price = { path = "../price" }
reward-scheduler = { path = "../reward_scheduler" }
solana = { path = "../solana" }
task-manager = { path = "../task_manager" }
tls-init = { path = "../tls_init" }
