[package]
name = "poclora-verifier"
version = "0.1.0"
description = "PoC Verifier Server for the Helium Lora Network"
edition.workspace = true
authors.workspace = true
license.workspace = true 

[build-dependencies]
cmake = "0.1"

[dependencies]
dotenv = {worksace = true}
clap = {workspace = true}
thiserror = {workspace = true}
serde =  {workspace = true}
serde_json = {workspace = true}
sqlx = {version = "0", features = ["postgres", "uuid", "decimal", "chrono", "migrate", "macros", "runtime-tokio-rustls"]}
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0"
sha2 = "*"
http = "*"
tonic = "0"
triggered = "0"
futures = "*"
futures-util = "*"
prost = "*"
hyper = "*"
axum = "0"
chrono = { workspace = true }
async-compression = {version = "0", features = ["tokio", "gzip"]}
helium-proto = { workspace = true }
helium-crypto = {workspace = true }
file-store = { path = "../file_store" }
async-trait = "*"
lazy_static = "*"
once_cell = "1"
h3ron = "*"
geo-types = "*"
geo = "*"
xorf = "*"

