[package]
name = "poc-metrics"
version = "0.1.0"
description = "Metrics for Helium Mobile Network servers"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tower = "0.4"
serde = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
